# Shine

./: .gitignore  AUTHORS  BuildSequence.cc  BuildSequence.h  CMakeLists.txt  INSTALL  Makefile  NMRdata.cc  NMRdata.h  NMRparseparameters.cc  NMRparseparameters.h  README.md  Shiftfileparser.cc  Shiftfileparser.h  Shine.cc  make3D_C++.cc
examples/kdp/CCH/: cchnoesy.par  simulationparameters
examples/kdp/CNH/: cnhnoesy.par  simulationparameters
examples/kdp/HCH/: hchnoesy.par  simulationparameters
examples/kdp/HNH/: hnhnoesy.par  simulationparameters
examples/kdp/NNH/: chemshifts  nnhnoesy.par  simulationparameters
nmrlib/: CMakeLists.txt  Makefile
nmrlib/PDBimport/: CMakeLists.txt  Makefile  pdbimport.cc
nmrlib/include/: amino.h  nmrFileIO.h  pdbimport.h  peakpickutil.h
nmrlib/nmrFileIO/: CMakeLists.txt  FileNotFoundException.cc  Makefile  ReadBetaSheet.cc  ReadNMRViewPar.cc  ReadNogo.cc  ReadPeaklist.cc  ReadSequence.cc  ReadShiftlist.cc  aminoshift.cc  shiftpair.cc
nmrlib/util/: CMakeLists.txt  Makefile  amino.cc  iupac2xplor_pdb.cc  peakpickutil.cc
plain2nv/: CMakeLists.txt  Makefile  plain2nv.c
plain2strip/: CMakeLists.txt  plain2strip.c
